ie11 horizontal scroll bars fix

--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,5 +1,6 @@
 .page-form {
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 .page-form__header {
